--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,17 +1,27 @@
-<h1><%= @invoice.supplier.supplier_name %>: <%= @invoice.invoice_number %></h1>
+<div class="row justify-content-center">
+  <h1><%= @invoice.supplier.supplier_name %>: <%= @invoice.invoice_number %></h1>
+</div>
+<hr>
 
-<!-- <a href="<%#= new_invoice_search_item_path(@invoice) %>" class="btn btn-link" type="button">
-  search
-</a> -->
+<div id="invoice">
+  <%= render 'invoices/nav_bar', invoice: @invoice %>
+</div>
 
-
-<%= render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>
-<%= render 'skus/form', invoice: @invoice %>
-<%= render 'skus/destroy', invoice: @invoice %>
-<%= render 'export_skus/form', invoice: @invoice %>
-<%= render 'invoices/edit', invoice: @invoice %>
-<%#= render 'invoices/nav_bar', invoice: @invoice %>
+<hr>
 
 <div id="items-table">
   <%= render 'items/table', invoice: @invoice %>
 </div>
+
+
+<%#= render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>
+<%#= render 'skus/form', invoice: @invoice %>
+
+<%#= render 'skus/destroy', invoice: @invoice %>
+<%#= render 'export_skus/form', invoice: @invoice %>
+<%#= render 'invoices/edit', invoice: @invoice %>
+<%#= render 'invoices/nav_bar', invoice: @invoice %>
+
+<!-- <a href="<%#= new_invoice_search_item_path(@invoice) %>" class="btn btn-link" type="button">
+  search
+</a> -->
