--- a/app/views/invoices/update.js.erb
+++ b/app/views/invoices/update.js.erb
@@ -1,1 +1,3 @@
-$("#supplier-show").replaceWith("<%= j render 'invoices/nav_bar', invoice: @invoice %>");
+//$("#supplier-show").replaceWith("<%= j render 'invoices/nav_bar', invoice: @invoice %>");
+//$("#edit-invoice").replaceWith("<%= j render 'invoices/edit', invoice: @invoice %>");
+$("#edit-invoice").replaceWith("<%= j render 'invoices/edit', invoice: @invoice %>");
