--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -24,9 +24,11 @@
       </div>
     </div>
   </div>
+</div>
 
-  <div class="col-7">
+<div class="row">
+  <!-- <div class="col-7"> -->
     <div id="show-card">
     </div>
-  </div>
+  <!-- </div> -->
 </div>
