--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,6 +1,10 @@
-<div class="form-inline" id="new-invoice">
-  <%= form_with model: Invoice.new, url: supplier_invoices_path(supplier) do |f| %>
-    <%= f.number_field :invoice_number, placeholder: "invoice #", class: "form-control form-control-sm mr-sm-2" %>
-    <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">submit</button>
-  <% end %>
-</div>
+<%= form_with model: Invoice.new, url: supplier_invoices_path(supplier), id: "new-invoice" do |f| %>
+  <div class="form">
+    <div class="input-group input-group-sm">
+      <%= f.number_field :invoice_number, placeholder: "invoice #", class: "form-control form-control-sm" %>
+      <div class="input-group-append">
+        <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">save</button>
+      </div>
+    </div>  
+  </div>
+<% end %>
