--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Invoice List</h1><br>
+<div class="row justify-content-center">
+  <h1>Invoice List</h1>
+</div>
+<hr>
 
 <table class="table table-striped table-hover">
   <thead>
