--- a/app/views/skus/_destroy.html.erb
+++ b/app/views/skus/_destroy.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: Item.new, url: batch_destroy_invoice_sku_path(invoice), id: "destroy-skus" do |f| %>
+<%= form_with model: Item.new, url: batch_destroy_invoice_sku_path(invoice), id: "destroy-skus", class: "collapse", data: {parent: "#invoice"} do |f| %>
   <div class="form">
     <div class="card bg-gray-d border-0 mb-2">
       <div class="form-row align-items-center p-1">
