--- a/app/views/suppliers/_show.html.erb
+++ b/app/views/suppliers/_show.html.erb
@@ -1,15 +1,20 @@
 <div class="card pb-0" id="<%= dom_tag(@supplier, :show) %>">
-  <%= render 'suppliers/nav_bar', supplier: @supplier %>
+  <div class="card-header border-0 p-1">
+    <div class="row">
+      <div class="col">
+        <%= render 'suppliers/edit', supplier: @supplier %>
+      </div>
+      <div class="col">
+        <%= render 'invoices/form', supplier: @supplier, invoice: Invoice.new %>
+      </div>
+    </div>
+  </div>
 
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">invoice #</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <%= render 'suppliers/table_body', invoices: @supplier.invoices %>
-    </tbody>
-  </table>
+  <div class="card-body p-0">
+    <table class="table table-striped table-hover mb-0">
+      <tbody>
+        <%= render 'suppliers/table_body', invoices: @supplier.invoices %>
+      </tbody>
+    </table>
+  </div>
 </div>
