--- a/app/views/suppliers/_tab.html.erb
+++ b/app/views/suppliers/_tab.html.erb
@@ -1,7 +1,7 @@
-<a class="list-group-item list-group-item-action" id="<%= dom_tag(supplier, 'tab-item') %>" href="<%= supplier_path(supplier) %>" data-remote="true" data-toggle="list">
+<a class="list-group-item list-group-item-action py-1" id="<%= dom_tag(supplier, 'tab-item') %>" href="<%= supplier_path(supplier) %>" data-remote="true" data-toggle="list">
   <div class="row">
     <div class="col item-name">
-      <%= supplier.supplier_name %>
+      <span class="text-sm"><%= supplier.supplier_name %></span>
     </div>
   </div>
 </a>
