added items/title methods to artist and product; next stop is creating new#title form

--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -18,9 +18,9 @@
         </div>
 
         <div class="col-md-1 offset-md-5">
-          <button class="btn btn-sm btn-outline-primary form-control" type="submit">submit</button>
+          <button class="btn btn-sm btn-outline-primary form-control" type="submit">save</button>
         </div>
-        
+
       </div>
     </div>
   </div>
