--- a/app/views/invoices/_nav_bar.html.erb
+++ b/app/views/invoices/_nav_bar.html.erb
@@ -8,42 +8,58 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#edit-invoice-toggle">Edit Invoice Info</a>
+        <a class="nav-link" data-toggle="collapse" href="#edit-invoice-toggle">Edit Invoice</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#new-skus-toggle">Add Sku Range</a>
+        <a class="nav-link" data-toggle="collapse" href="#new-skus-toggle">Add Skus</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#destroy-skus">Delete Sku Range</a>
+        <a class="nav-link" data-toggle="collapse" href="#destroy-skus-toggle">Delete Skus</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#export-skus">Export Sku Range</a>
+        <a class="nav-link" data-toggle="collapse" href="#export-skus-toggle">Export Skus</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="<%= supplier_invoice_path(invoice) %>" data-method="delete" data-remote="true" data-confirm="Are you sure?">Delete Invoice</a>
+        <a class="nav-link" data-toggle="collapse" href="#artist-toggle">Add Artist</a>
       </li>
     </ul>
-  </div>
 
+  </div>
+  <a class="btn btn-sm btn-outline-danger" href="<%= supplier_invoice_path(invoice) %>" data-method="delete" data-remote="true" data-confirm="Are you sure?">Delete Invoice</a>
 </nav>
 
 <div class="pos-f-t">
-  <div class="collapse" id="edit-invoice-toggle" data-parent="#invoice">
+  <div class="collapse" id="edit-invoice-toggle" data-parent="#invoice-navbar-forms">
+    <hr>
     <%= render 'invoices/edit', invoice: @invoice %>
   </div>
 </div>
 
 <div class="pos-f-t">
-  <div class="collapse" id="new-skus-toggle" data-parent="#invoice">
+  <div class="collapse" id="new-skus-toggle" data-parent="#invoice-navbar-forms">
+    <hr>
     <%= render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>
     <%= render 'skus/form', invoice: @invoice %>
   </div>
 </div>
 
 <div class="pos-f-t">
-  <%= render 'skus/destroy', invoice: @invoice %>
+  <div class="collapse" id="destroy-skus-toggle" data-parent="#invoice-navbar-forms">
+    <hr>
+    <%= render 'skus/destroy', invoice: @invoice %>
+  </div>
 </div>
 
 <div class="pos-f-t">
-  <%= render 'export_skus/form', invoice: @invoice %>
+  <div class="collapse" id="export-skus-toggle" data-parent="#invoice-navbar-forms">
+    <hr>
+    <%= render 'export_skus/form', invoice: @invoice %>
+  </div>
+</div>
+
+<div class="pos-f-t">
+  <div class="collapse" id="artist-toggle" data-parent="#invoice-navbar-forms">
+    <hr>
+    <%= render 'artists/form' %>
+  </div>
 </div>
