--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -7,6 +7,8 @@
   <%= render 'invoices/nav_bar', invoice: @invoice %>
 </div>
 
+<%= render 'skus/new', invoice: @invoice %>
+
 <hr>
 
 <div id="items-table">
