--- a/app/views/skus/_form.html.erb
+++ b/app/views/skus/_form.html.erb
@@ -1,42 +1,69 @@
 <%= form_with model: Item.new, url: invoice_skus_path(invoice), id: "new-skus" do |f| %>
   <div class="form">
-    <div class="card bg-gray-d border-0 mb-2">
-      <div class="form-row align-items-center p-1">
+    <div class="card bg-disabled mb-2">
 
-        <div class="col-3 ml-0">
-          <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">skus</label>
-            <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control" %>
-          </div>
-        </div>
+      <div class="card-header bg-transparent pt-1 pb-1 pl-0 pr-0">
 
-        <div class="col-3 ml-0">
-          <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">artist</label>
-            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: "form-control artist_id", id: "artist_id" %>
-          </div>
-        </div>
+        <div class="form-row p-1">
 
-        <div class="col-3 ml-0">
-          <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">prd</label>
-            <%= f.collection_select :product_id, Product.all, :id, :product_name, {include_blank: true}, class: "form-control product_id", id: "product_id" %>
-          </div>
-        </div>
-
-        <div class="col-3 ml-0">
-          <div class="input-group input-group-sm">
-            <div class="input-group-prepend">
-              <button class="btn btn-outline-secondary toggle-view" type="button" id="title-toggle"><span class="fs-xs font-weight-light text-secondary pt-2 px-0">title</span></button>
+          <div class="col-4 ml-0">
+            <div class="input-group input-group-sm">
+              <button id="caret-toggle" class="caret-toggle btn btn-sm bg-transparent ml-0 my-1 pl-1 py-0 pr-2" type="button"><%= (fa_icon "caret-right") %></button>
+              <label class="fs-xs font-weight-light text-secondary pt-2 pl-1 pr-1">skus</label>
+              <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control bg-gray-d" %>
             </div>
-            <%= render 'items/title', titles: titles %>
-            <%= f.text_field :title, class: "form-control title-toggle default-show show", id: 'title-text' %>
+          </div>
+
+          <div class="col-md-1 offset-md-7">
+            <button class="btn btn-sm btn-outline-primary form-control" type="submit">save</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-body pt-2 pb-1 pl-0 bg-gray-d border border-white border-top-0 rounded-bottom collapse">
+
+        <div class="form-row pl-1 ml-0 mb-2">
+          <div class="col-4 ml-0">
+            <div class="input-group input-group-sm">
+              <label class="fs-xs font-weight-light text-secondary pt-2 pl-1 pr-2">artist</label>
+              <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: "form-control bg-gray-c artist_id", id: "artist_id" %>
+            </div>
+          </div>
+
+          <div class="col-6 ml-0">
+            <div class="input-group input-group-sm">
+              <label class="fs-xs font-weight-light text-secondary pt-2 pl-1 pr-2">prd</label>
+              <%= f.collection_select :product_id, Product.all, :id, :product_name, {include_blank: true}, class: "form-control bg-gray-c product_id", id: "product_id" %>
+            </div>
           </div>
         </div>
 
-        <div class="col-md-1 offset-md-8">
-          <button class="btn btn-sm btn-outline-primary form-control" type="submit">save</button>
+        <div class="form-row pl-1 ml-0">
+          <div class="col-4 ml-0">
+            <div class="input-group input-group-sm">
+              <div class="input-group-prepend">
+                <button class="btn btn-outline-light pl-1 pr-2 toggle-view" type="button" id="title-toggle"><span class="fs-xs font-weight-light text-secondary pt-2 px-1">title</span></button>
+              </div>
+              <%= render 'items/title', titles: titles %>
+              <%= f.text_field :title, class: "form-control bg-gray-c title-toggle default-show show", id: 'title-text' %>
+            </div>
+          </div>
+
+          <div class="col-2">
+            <div class="input-group input-group-sm">
+              <label class="fs-xs font-weight-light text-secondary pt-2 px-1">$</label>
+              <%= f.number_field :retail, class: "form-control bg-gray-c field-param" %>
+            </div>
+          </div>
+
+          <div class="col-1">
+            <div class="input-group input-group-sm">
+              <label class="fs-xs font-weight-light text-secondary pt-2 px-1">qty:</label>
+              <%= f.number_field :qty, class: "form-control bg-gray-c field-param" %>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
