--- a/app/views/item_fields/update.js.erb
+++ b/app/views/item_fields/update.js.erb
@@ -2,7 +2,7 @@ document.getElementById("tagline").textContent="<%= @item.hattr('csv_tags', 'tag
 document.getElementById("description").textContent="<%= @item.hattr('csv_tags', 'description') %>";
 var toggle = <%= @toggle %>
 $("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
-$("#edit-item").html("<%= j render 'items/form', invoice: @item.invoice, item: @item %>");
+$("#edit-item").html("<%= j render 'items/form', invoice: @item.invoice, item: @item, titles: @titles %>");
 
 if ($(toggle).hasClass("caret-toggle")){
   var id = $(toggle).attr("id");
