--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -4,20 +4,23 @@
 
     <% inputs.each do |input| %>
       <div class="col-3 border-light-gray p-1">
-        <div class="input-group input-group-sm">
+        <div class="input-group input-group-sm" data-form="#search-item-product">
           <label class="fs-s font-weight-light text-secondary pr-1"> <%= search_label(input['input_name']) %></label>
-          <%= select_tag "items[search][#{input['input_name']}]", options_for_select(search_input_options(input['input_name'], input['opts']), input['selected']), {class: "form-control border-light-gray rounded-right-border rounded-left-border search-select"} %>
+          <div class="input-group-prepend">
+            <button class="btn btn-sm btn-outline-secondary text-sm font-weight-light border-light-gray rounded-left-border border-right-0 unselect" type="button"><%= (fa_icon "repeat") %></button>
+          </div>
+          <%= select_tag "items[search][#{input['input_name']}]", options_for_select(search_input_options(input['input_name'], input['opts']), input['selected']), {include_blank: true, class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 search-select"} %>
         </div>
       </div>
     <% end %>
 
     <div class="col-6 border-light-gray p-1">
-      <div class="input-group input-group-sm">
+      <div class="input-group input-group-sm" data-input="item[product_id]" data-form="#edit-item">
         <label class="fs-s font-weight-light text-secondary pr-1">prd:</label>
         <div class="input-group-prepend">
-          <button class="btn btn-sm btn-outline-secondary text-sm font-weight-light border-light-gray rounded-left-border border-right-0 refresh" data-target="item[product_id]" type="button"><%= (fa_icon "repeat") %></button>
+          <button class="btn btn-sm btn-outline-secondary text-sm font-weight-light border-light-gray rounded-left-border border-right-0 deselect" type="button"><%= (fa_icon "repeat") %></button>
         </div>
-        <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: "form-control border-light-gray rounded-right-border border-left-0 item-product-select", data:{target: "item[product_id]"} %>
+        <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 update-search" %>
       </div>
     </div>
 
