--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,39 +1,47 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
-  <div class="form-inline">
-    <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "collapse" %>
+  <div class="form">
+    <div class="card bg-gray-d p-0 mb-2">
+      <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "collapse" %>
 
-    <div class="col-2 border-light-gray p-1">
-      <div class="input-group input-group-sm">
-        <label class="fs-xs font-weight-light text-secondary"><span class="kind-label">sku:</span></label>
-        <%= f.number_field :sku, placeholder: "sku", class: "form-control border-gray-b field-param" %>
-      </div>
-    </div>
+      <div class="form-row pl-1 ml-0 mb-2">
+        <div class="col-2 pt-2">
+          <div class="input-group input-group-sm">
+            <label class="fs-xs font-weight-light text-secondary pt-2"><span class="kind-label">sku:</span></label>
+            <%= f.number_field :sku, placeholder: "sku", class: "form-control bg-gray-c field-param" %>
+          </div>
+        </div>
 
-    <div class="col-3 border-light-gray p-1">
-      <div class="input-group input-group-sm">
-        <label class="fs-xs font-weight-light text-secondary pr-1">artist:</label>
-        <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: "form-control border-gray-b field-param" %>
-      </div>
-    </div>
+        <div class="col-3 border-light-gray pt-2">
+          <div class="input-group input-group-sm">
+            <label class="fs-xs font-weight-light text-secondary pt-2 pr-1">artist:</label>
+            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: "form-control bg-gray-c field-param" %>
+          </div>
+        </div>
 
-    <div class="col-4 border-light-gray p-1">
-      <div class="input-group input-group-sm">
-        <label class="fs-xs font-weight-light text-secondary pr-1">title:</label>
-        <%= f.text_field :title, placeholder: "title", class: "form-control border-gray-b field-param" %>
-      </div>
-    </div>
+        <div class="col-4 border-light-gray pt-2">
+          <div class="input-group input-group-sm">
 
-    <div class="col-2 border-light-gray p-1">
-      <div class="input-group input-group-sm">
-        <label class="fs-xs font-weight-light text-secondary pr-1">$</label>
-        <%= f.number_field :retail, placeholder: "retail", class: "form-control border-gray-b field-param" %>
-      </div>
-    </div>
+            <div class="input-group-prepend">
+              <button class="btn btn-outline-light pl-1 pr-2 toggle-view" type="button" id="title-toggle"><span class="fs-xs font-weight-light text-secondary px-1">title</span></button>
+            </div>
+            <%= render 'items/title', titles: titles %>
+            <%= f.text_field :title, class: "form-control bg-gray-c title-toggle default-show show field-param", id: 'title-text' %>
+          </div>
+        </div>
 
-    <div class="col-1 border-light-gray p-1">
-      <div class="input-group input-group-sm">
-        <label class="fs-xs font-weight-light text-secondary pr-1">qty:</label>
-        <%= f.number_field :qty, placeholder: "qty", class: "form-control border-gray-b field-param" %>
+        <div class="col-2 border-light-gray pt-2">
+          <div class="input-group input-group-sm">
+            <label class="fs-xs font-weight-light text-secondary pt-2 pr-1">$</label>
+            <%= f.number_field :retail, class: "form-control bg-gray-c field-param" %>
+          </div>
+        </div>
+
+        <div class="col-1 border-light-gray pt-2 pr-3">
+          <div class="input-group input-group-sm">
+            <label class="fs-xs font-weight-light text-secondary pt-2 pr-1">qty:</label>
+            <%= f.number_field :qty, class: "form-control border-gray-b field-param" %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
