--- a/app/views/item_fields/_edit.html.erb
+++ b/app/views/item_fields/_edit.html.erb
@@ -3,7 +3,7 @@
     <%= text_field_tag "card_id", nil, class: "collapse", id: 'caret-id' %>
 
     <% rows.each do |card_id, card| %>
-      <div class="card p-1 mb-1 bg-disabled border-0">
+      <div class="card bg-gray-d p-1 mb-1">
         <div class="card-header border-0 bg-transparent pt-1 pb-1 pl-0 pr-0">
           <div class="form-row">
             <% card[:header].each do |f_hsh| %>
