--- a/app/views/item_fields/update.js.erb
+++ b/app/views/item_fields/update.js.erb
@@ -1,8 +1,7 @@
-document.getElementById("tagline").textContent="<%= @item.hattr('csv_tags', 'tagline') %>";
-document.getElementById("description").textContent="<%= @item.hattr('csv_tags', 'description') %>";
 var toggle = <%= @toggle %>
 $("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
 $("#edit-item").html("<%= j render 'items/form', invoice: @item.invoice, item: @item, titles: @titles %>");
+$("#description-toggle").html("<%= j render 'items/description', item: @item %>");
 
 if ($(toggle).hasClass("caret-toggle")){
   var id = $(toggle).attr("id");
