--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -1,28 +1,34 @@
 <%= form_with model: item, url: search_item_products_path, method: :get, id: 'search-item-product' do |f| %>
-  <div class="form-inline">
-    <%= number_field_tag :id, item.id, class: "collapse" %>
-
-    <% inputs.each do |input| %>
-      <div class="col-3 border-light-gray p-1">
-        <div class="input-group input-group-sm" data-form="#search-item-product">
-          <label class="fs-s font-weight-light text-secondary pr-1"> <%= search_label(input['input_name']) %></label>
-          <div class="input-group-prepend">
-            <button class="btn btn-sm btn-outline-secondary text-sm font-weight-light border-light-gray rounded-left-border border-right-0 unselect" type="button"><%= (fa_icon "repeat") %></button>
+  <div class="form">
+    <div class="card bg-gray-d p-1 mb-1">
+      <%= number_field_tag :id, item.id, class: "collapse" %>
+      <div class="form-row">
+        <% inputs.each do |input| %>
+          <div class="col-3 border-light-gray p-1">
+            <div class="input-group input-group-sm" data-form="#search-item-product">
+              <div class="input-group-prepend">
+                <span class="fs-xs font-weight-light text-secondary search-label pt-2 pr-1"><%= search_label(input['input_name']) %></span>
+              </div>
+              <div class="input-group-prepend">
+                <button class="btn btn-sm btn-outline-secondary border-light-gray rounded-left-border border-right-0 text-sm font-weight-light unselect" type="button"><%= (fa_icon "repeat") %></button>
+              </div>
+              <%= select_tag "items[search][#{input['input_name']}]", options_for_select(search_input_options(input['input_name'], input['opts']), input['selected']), {include_blank: true, class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 search-select"} %>
+            </div>
           </div>
-          <%= select_tag "items[search][#{input['input_name']}]", options_for_select(search_input_options(input['input_name'], input['opts']), input['selected']), {include_blank: true, class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 search-select"} %>
-        </div>
-      </div>
-    <% end %>
+        <% end %>
 
-    <div class="col-6 border-light-gray p-1">
-      <div class="input-group input-group-sm" data-input="item[product_id]" data-form="#edit-item">
-        <label class="fs-s font-weight-light text-secondary pr-1">prd:</label>
-        <div class="input-group-prepend">
-          <button class="btn btn-sm btn-outline-secondary text-sm font-weight-light border-light-gray rounded-left-border border-right-0 deselect" type="button"><%= (fa_icon "repeat") %></button>
+        <div class="col-6 border-light-gray p-1">
+          <div class="input-group input-group-sm" data-input="item[product_id]" data-form="#edit-item">
+            <div class="input-group-prepend">
+              <span class="fs-xs font-weight-light text-secondary search-label pt-2 pr-1">product</span>
+            </div>
+            <div class="input-group-prepend">
+              <button class="btn btn-sm btn-outline-secondary border-light-gray rounded-left-border border-right-0 text-sm font-weight-light deselect" type="button"><%= (fa_icon "repeat") %></button>
+            </div>
+            <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 update-search" %>
+          </div>
         </div>
-        <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 update-search" %>
       </div>
     </div>
-
   </div>
 <% end %>
