--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,45 +1,45 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
   <div class="form">
-    <div class="card bg-gray-d p-0 mb-2">
+    <div class="card bg-gray-d p-0 mb-1">
       <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "collapse" %>
 
       <div class="form-row pl-1 ml-0 mb-2">
-        <div class="col-2 pt-2">
+
+        <div class="col-3 pl-4 pt-2">
           <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2"><span class="kind-label">sku:</span></label>
-            <%= f.number_field :sku, placeholder: "sku", class: "form-control bg-gray-c field-param" %>
+            <div class="input-group-prepend">
+              <span class="kind-label bg-gray-c border border-gray-b rounded-left-border-md border-right-0 text-info fs-xs font-weight-light pt-2 pl-1 pr-0">artist</span>
+            </div>
+            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0 field-param" %>
           </div>
         </div>
 
-        <div class="col-3 border-light-gray pt-2">
-          <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 pr-1">artist:</label>
-            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: "form-control bg-gray-c field-param" %>
-          </div>
-        </div>
-
-        <div class="col-4 border-light-gray pt-2">
+        <div class="col-4 pt-2">
           <div class="input-group input-group-sm">
 
             <div class="input-group-prepend">
-              <button class="btn btn-outline-light pl-1 pr-2 toggle-view" type="button" id="title-toggle"><span class="fs-xs font-weight-light text-secondary px-1">title</span></button>
+              <button class="btn kind-label bg-gray-c border border-gray-b rounded-left-border-md border-right-0 pl-1 pr-2 toggle-view" type="button" id="title-toggle"><span class="text-info fs-xs px-1">title</span></button>
             </div>
             <%= render 'items/title', titles: titles %>
-            <%= f.text_field :title, class: "form-control bg-gray-c title-toggle default-show show field-param", id: 'title-text' %>
+            <%= f.text_field :title, class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0 default-show show title-toggle field-param", id: 'title-text' %>
           </div>
         </div>
 
-        <div class="col-2 border-light-gray pt-2">
+        <div class="col-2 pt-2">
           <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 pr-1">$</label>
-            <%= f.number_field :retail, class: "form-control bg-gray-c field-param" %>
+            <div class="input-group-prepend">
+              <span class="kind-label bg-gray-c border border-gray-b rounded-left-border-md border-right-0 text-info fs-xs font-weight-light pt-2 pl-1 pr-0">retail</span>
+            </div>
+            <%= f.number_field :retail, class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0 field-param" %>
           </div>
         </div>
 
-        <div class="col-1 border-light-gray pt-2 pr-3">
+        <div class="col-2 pt-2 pr-3">
           <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 pr-1">qty:</label>
-            <%= f.number_field :qty, class: "form-control border-gray-b field-param" %>
+            <div class="input-group-prepend">
+              <span class="kind-label bg-gray-c border border-gray-b rounded-left-border-md border-right-0 text-info fs-xs font-weight-light pt-2 pl-1 pr-0">qty</span>
+            </div>
+            <%= f.number_field :qty, class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0 field-param" %>
           </div>
         </div>
       </div>
