--- a/app/views/items/_title.html.erb
+++ b/app/views/items/_title.html.erb
@@ -1,1 +1,1 @@
-<%= select(:item, :title, titles, {include_blank: true}, class: "collapse form-control bg-gray-c default-collapse title-toggle pl-1", id: 'title-select') %>
+<%= select(:item, :title, titles, {include_blank: true}, class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0 default-collapse collapse title-toggle pl-1", id: 'title-select') %>
