refactored all forms om item#show

--- a/app/views/item_fields/_label.html.erb
+++ b/app/views/item_fields/_label.html.erb
@@ -1,3 +1,3 @@
 <div class="input-group-prepend">
-  <span class="kind-label bg-gray-c border border-gray-b rounded-left-border-md border-right-0 text-info fs-xs font-weight-light pt-2 pl-1 pr-0"><%= input_label(f_hsh) %></span>
+  <span class="kind-label bg-gray-c border border-gray-b rounded-left-border-md border-right-0 text-info fs-xs font-weight-light pt-2 pl-1 pr-0"><%= input_label(label) %></span>
 </div>
