--- a/app/views/artists/_tags.html.erb
+++ b/app/views/artists/_tags.html.erb
@@ -1,9 +1,9 @@
 <% artist_form_row(fields).each do |field| %>
   <%= f.fields_for :tags, OpenStruct.new(artist.tags) do |ff| %>
-    <div class="<%= "#{field['col']} ml-0" %>">
+    <div class="<%= "#{field['col']} pt-2" %>">
       <div class="input-group input-group-sm">
-        <label class="fs-xs font-weight-light text-secondary pt-2 px-1 kind-label"><%= field['label'] %></label>
-        <%= ff.text_field field['name'], class: "form-control form-control-sm", id: field['name'] %>
+        <%= render "item_fields/label", label: field['label'] %>
+        <%= ff.text_field field['name'], class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0", id: field['name'] %>
       </div>
     </div>
   <% end %>
