--- a/app/views/items/_nav_bar.html.erb
+++ b/app/views/items/_nav_bar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-disabled">
-  <a class="navbar-brand" id="sku"><%= item.sku %></a>
+  <a class="navbar-brand" id="sku">Sku: <%= item.sku %></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#item-nav">
     <span class="navbar-toggler-icon"></span>
